# zapm

./: Cargo.toml  README.md
scripts/: zapm.service
src/: config.rs  daemon.rs  main.rs  process.rs  server.rs  utils.rs
static/: app.js  index.html  styles.css
