[package]
name = "zapm"
version = "0.1.0"
edition = "2021"
description = "A process management tool implemented in Rust"
authors = ["zap z@zap.cn"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["http1"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
include_dir = "0.7.3"
serde_yaml = "0.9"
humantime = "2.1"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
sysinfo = "0.29"
mime_guess = "2.0"
dirs = "5.0"



# 跨平台依赖
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
